Fix the spacing between the title and the article when printing.

--- a/tdoc/common/static/tdoc/print.css
+++ b/tdoc/common/static/tdoc/print.css
@@ -61,6 +61,7 @@
         margin-left: 0;
     }
     .bd-main .bd-content .bd-article-container .bd-article {
+        padding-top: 1.5rem;
         padding-left: 0;
         padding-right: 0;
     }
